Quorum3/Library/Tests/TypeCheckerGenerated/Fail/ImpAssignTextObjIntObjField.quorum
class Main
    Integer v
    action Main
        v:SetValue(5)
        Test(v)
    end

    action Test(Text var)
    end
end
